--- a/aboutMe.html
+++ b/aboutMe.html
@@ -139,13 +139,12 @@
   <p>This site and contents are © 2021 Lynn Faiola.</p>
   </div>
   <div class="right">
-  <a href="https://www.linkedin.com/in/hlynnbigham/" target="_blank"><img class="padded" src="./images/linkedin_icon.png" height="30" width="30"></a>
+  <a href="https://www.linkedin.com/in/hlynnbigham/" target="_blank"><img class="padded" src="images/linkedin_icon.png" height="30" width="30"></a>
   <img src="./images/email_icon.png" height="30" width="30">
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-<script src="../lynnfaiola.js"></script>
 </body>
 </html>
