--- a/aboutMe.html
+++ b/aboutMe.html
@@ -139,7 +139,7 @@
   <p>This site and contents are © 2021 Lynn Faiola.</p>
   </div>
   <div class="right">
-  <a href="https://www.linkedin.com/in/hlynnbigham/" target="_blank"><img class="padded" src="images/linkedin_icon.png" height="30" width="30"></a>
+  <a href="https://www.linkedin.com/in/hlynnbigham/" target="_blank"><img class="padded" src="./images/linkedin_icon.png" height="30" width="30"></a>
   <img src="./images/email_icon.png" height="30" width="30">
   </div>
 </footer>
